src/pages/EditProfile/style.css
.edit-profile{
    width: 100%;
    min-height: 100vh;
    background-image: url('../../assets/editProfileBg.png');
    background-size: cover; 
    background-position: center;
}

.edit-profile__form{
    padding-top: 110px;
    padding-bottom: 20px;
    width: 100%;
    min-height: 100vh;
    color: white;
    background-color: #221F26;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}


.edit-profile__user-picture-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 30px;
}


.edit-profile__user-picture {
    width: 120px;
    height: 120px;
    object-fit: cover; /* Ensures the image covers the entire area without distortion */
    border-radius: 50%; /* Turns the image into a circle */
}


.edit-profile__form-input{
    display: flex;
    flex-direction: column;
    font-size: 20px;
    padding-bottom: 14px;
    width: 100%;
    max-width: 400px;
}

.edit-profile__form-input-field-checkbox{
    display: flex;
    align-items: center;
}

.edit-profile__form-input-field-checkbox-input{
    display: flex;
    flex-direction: column;
}

.edit-profile__form-input input{
    font-size: 18px;
    padding: 10px;
    border: none;
    border-radius: 5px;
}

.edit-profile__checkbox {
    width: 15px;
    height: 15px;
    transform: scale(1.5);
  }

.edit-profile__form-input-field{
    display: flex;
    flex-direction: column;
}

.edit-profile__form-input-error {
    color: red;                /* Error text color */
    font-size: 1rem;       /* Error text size */
    min-height: 1em;
    margin-top: 6px;           /* Reserve space for the error message */
    opacity: 0;                /* Start hidden */
    transition: opacity 0.3s ease;  /* Smooth fade-in transition */
}

.edit-profile__form-input-error.visible {
    opacity: 1;                /* Make visible when there's an error */
}

.edit-profile__form-input-error.hidden {
    opacity: 0;                /* Keep hidden when there’s no error */
}


.edit-profile__form-input-text{
    margin: 0px 10px 0px 0px;
}


.edit-profile__form-btn{
    width: 100%;
    max-width: 225px;
    font-size: 18px;
    color: white;
    padding: 20px;
    outline: none;
    border: none;
    background-color: #39363D;
    cursor: pointer;
    border: 1px solid white;
}


@media (min-width: 768px) {
    .edit-profile{
        width: 100%;
        min-height: 100vh;
        padding-top: 120px;
        padding-bottom: 100px;
        display: flex;
        justify-content: center;
        position: relative;
        overflow: auto;
    }

    .edit-profile::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: rgba(0, 0, 0, 0.5);
        z-index: 1;
    }
    
    .edit-profile__form{
        width: 100%;
        max-width: 900px;
        height: auto;
        min-height: auto;
        padding: 30px;
        border-radius: 20px;
        z-index: 3;
    }

    .edit-profile__form-input{
        font-size: 18px;
    }
    
    .edit-profile__form-input input{
        font-size: 16px;
    }

}

